# wavesmp

./: .eslintrc.js  .gitignore  .prettierignore  Dockerfile.client  README.md  compose.yaml  docker-compose.yaml  package-lock.json  package.json  restore-server.sh
aws/: README.md  policy.json  role.json
backup-scripts/: backup.sh  common.sh  restore.sh
client/: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  package-lock.json  package.json
client/tests/: integration-test.sh
k8s/: mysql-deployment.yaml  mysql-pvc.yaml  mysql-service.yaml  namespace.yaml  waves-client-web-deployment.yaml  waves-client-web-service.yaml  waves-server-rust-deployment.yaml  waves-server-rust-service.yaml
k8s/examples/: waves-server-rust-config-map.example.yaml
scripts/: count-lines.sh
scripts/backups/: backup.sh  common.sh  mysql-restore-deployment.yaml  restore.sh
scripts/check-consistency/: Pipfile  check.py  check.sh
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
server/hack/empty-src/: main.rs
server/src/: config.rs
server/src/database/: mod.rs  types.rs
server/src/ws_server/: mod.rs  waves_message_handler.rs  waves_message_types.rs
server/tests/: integration_test.rs
server/tests/http_tests/: mod.rs
server/tests/port_utils/: mod.rs
server/tests/ws_tests/: mod.rs
