[package]
name = "waves-server-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Logging setup
log = "0.4.21"
env_logger = "0.11.3"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = { version = "1.0", features = ["raw_value"] }

# Http Server
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

futures = "0.3"

fastwebsockets = {version = "0.7.1", features = ["upgrade"] }

google-oauth = { version = "1", default-features = false, features = ["reqwest-rustls"] }

anyhow = "1.0"
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "json", "macros"  ] }

[dev-dependencies]
tempfile = "3"
